# newTrackon

./: .gitattributes  .gitignore  .pyup.yml  .stickler.yml  .travis.yml  Dockerfile  LICENSE.txt  Makefile  Pipfile  README.md  TODO.txt  app.yaml  bdecode.py  bencode.py  cron.yaml  docker-compose.yml  lgtm.yml  main.py  mestat.py  new-trackers.py  pyproject.toml  queue.yaml  renovate.json  renovate.json5  requirements.txt  run.py  scraper.py  server.py  tracker.py  trackerlist_project.py  trackon.py  trackon.schema  up.sh  update-trackers.py
.github/: dependabot.yml
.github/workflows/: anchore-analysis.yml  azure-container-scan.yml  check.yml  codeql-analysis.yml  container-scan.yml  docker-push.yml  main.yml  ossar-analysis.yml  test.yml
contrib/: mako-render
data/: .gitignore  migration1.sql
mako/: __init__.py  ast.py  exceptions.py  filters.py  lexer.py  parsetree.py  util.py
newTrackon/: bdecode.py  db.py  ingest.py  newtrackon-api.yml  persistance.py  persistence.py  scraper.py  tracker.py  trackerlist_project.py  trackon.py  utils.py  views.py
newTrackon/tpl/: base.jinja  base.mako  main.jinja  main.mako  raw.jinja  raw.mako  submitted.jinja  submitted.mako
src/: main.py  new-trackers.py  test.py  tracker.py  update-trackers.py
src/mako/: codegen.py  lookup.py  pygen.py  runtime.py  template.py
static/: browserconfig.xml  manifest.json  style.css
static/css/: base.min.css  custom.css  custom.min.css  theme.css  (+2 more)
tests/: conftest.py
tpl/: admin.mako  base.mako  incoming-log.mako  list.mako  main.mako  raw.mako  submitted.mako  trackers-raw-info.mako  trk.mako
trackon/: admin.py  gaeutils.py  incoming-log.py  main.py  new-trackers.py  tracker.py  trackers-raw-info.py  trk.py  update-trackers.py  web.py
utils/: migrate_added.py  migration1.sql
(+32 files in other folders)
