[project]
name = "newTrackon"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "requests==2.32.5",
    "tornado==6.5.2",
    "Flask==3.1.2",
    "dnspython==2.8.0",
]

[dependency-groups]
dev = [
    "ruff",
    "basedpyright",
]

[tool.setuptools.packages.find]
exclude = ["data*"]

[tool.ruff]
line-length = 130

[tool.pyright]
typeCheckingMode = "standard"
include = ["newTrackon"]
