[project]
name = "newTrackon"
version = "1.0.0"
requires-python = "==3.14.*"
dependencies = [
    "requests==2.32.4",
    "tornado==6.5.1",
    "Flask==3.1.1",
    "dnspython==2.7.0",
]

[dependency-groups]
dev = [
    "ruff",
    "basedpyright",
]

[tool.setuptools.packages.find]
exclude = ["data*"]

[tool.ruff]
line-length = 130
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["I", "UP", "Q", "G", "PLE", "PLC", "RUF"]


[tool.pyright]
typeCheckingMode = "basic"
include = ["newTrackon"]
