[project]
name = "newTrackon"
version = "1.0.0"
requires-python = "==3.14.*"
dependencies = [
    "requests==2.32.5",
    "tornado==6.5.4",
    "Flask==3.1.2",
    "dnspython==2.8.0",
]

[dependency-groups]
dev = [
    "ruff",
    "basedpyright",
    "ty",
    "pytest",
    "pytest-cov",
    "freezegun",
    "djlint",
]

[tool.setuptools.packages.find]
exclude = ["data*"]

[tool.ruff]
line-length = 130
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["I", "UP", "Q", "G", "PLE", "PLC", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Allow imports inside test functions for test isolation
"tests/**/*.py" = ["PLC0415"]


[tool.pyright]
typeCheckingMode = "strict"

[tool.djlint]
profile = "jinja"
extension = "jinja"

